--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
     <title>Doodle Tistory blog WireFrame</title>
 </head>
 <body>
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Button</button>
+    <main class="flex">
+        <aside class="w-1/5">
+            <div class="h-32 border-b-2">
+                <img src="../images/doodle-logo.png" class="" style="border:1px solid red">
+            </div>
+        </aside>
+        <!-- visual -->
+        <section class="w-4/5">
+            내용이 들어갑니다.
+        </section>
+        <!-- //visual -->
+    </main>
+
+    <a href="https://tailwindcss.com/" target="_blank" class=""></a>
 </body>
 </html>
