fix : gitignore package-lock.json add

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doodle Tistory blog WireFrame</title>
+    <style>
+        .logo{width:100px;height:100px;}
+    </style>
 </head>
 <body>
     <main class="flex">
-        <aside class="w-1/5">
-            <div class="h-32 border-b-2">
-                <img src="../images/doodle-logo.png" class="" style="border:1px solid red">
+        <aside class="w-1/5 border-r">
+            <div class="h-32 border-b flex flex-col">
+                <img src="" id="logo" class="logo">
             </div>
         </aside>
         <!-- visual -->
